# CMPT433_ALLIN

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/include/: musicThread.h  neoPixel.h  threadController.h  trafficControl.h  udp.h
app/src/: main.c  musicThread.c  neoPixel.c  threadController.c  trafficControl.c  udp.c
hal/: CMakeLists.txt
hal/include/: I2C.h  Leds.h  digitDisplay.h  joystick.h  matrix.h  motionSensor.h  photoresistor.h  pot.h  tempSensor.h  utils.h
hal/src/: I2C.c  Leds.c  digitDisplay.c  joystick.c  matrix.c  motionSensor.c  photoresistor.c  pot.c  tempSensor.c  utils.c
pru-allin/: AM335x_PRU.cmd  CMakeLists.txt  Makefile  resource_table_empty.h  sharedDataStruct.h  sharedMem-PRU.c
web/: Makefile  package-lock.json  package.json  server.js
web/lib/: udp_server.js
web/public/: index.html
web/public/control/: index.html
web/public/javascripts/: chart.js  db.js  udp_ui.js
web/public/stat/: index.html
web/public/status/: index.html
web/public/stylesheets/: control.css  stat.css  status.css  style.css
